SQuirreL SQL Client Change Log
==============================


${squirrelsql.changelog.header}

Not yet released, available in our Subversion repository and in future snapshots and releases.
===============================================================================================

Enhancements:

DBCopy Plugin:
  - Offers a new menu item "Paste table as ..." that allows to change the pasted table's name.
    This function works if only a single table was copied.
  - Tables can now be pasted to arbitrary Schemas.
  - In the Plugin preferences the user may choose to append copied data to existing tables

Copy as INSERT-VALUES statement now works on almost any table not just on editable tables. If a table isn't in
  a Session scope ";" is used as statement separator instead of the separator defined in Session properties.


Swing Violation Detector Plugin:
  This new plugin will help to detect rule violations of the Swing programming model. The usage of this plugin is only recommonend for
  testers and developers.

Code Completion Plugin:
  The Code Completion Plugin's preferences allows to switch on CamelCase completion
  which is a common feature in many modern IDEs.
  CamelCase completion may be useful if a RDBMS supports capital and small letters in database object names.

Hibernate Plugin:
  - Redesign of HQL result display. Focus is now on displaying result objects instead of Hibernate generated SQL.
  - User can choose if he wants to use the Session's JDBC connection or the one configured with Hibernate.

Syntax Plugin:
  Duplicate line (ctrl+d) now duplicates the line at cursor if no text is selected
  and duplicates the selection if a selection exists.

Hibernate Plugin:
  On Windows the class path's files defined in the Hibernate configuration would remain locked even
  after disconnecting Hibernate. This doesn't happen anymore when Hibernate is run in its own process.

Graph Plugin: