@@ -1,7 +1,6 @@
 package net.sourceforge.squirrel_sql.plugins.hibernate.server;
 
 import java.io.Serializable;
-import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
@@ -12,6 +11,11 @@ public class ObjectSubstitute implements Serializable
    private MappedClassInfoData _mappedClassInfoData;
    private String _toString;
 
+
+   public static final String PLAIN_VALUES = "<plain values>";
+   private ArrayList<Object> _plainValueArray;
+   private HashMap<String, PlainValue> _plainValueByPropertyName = new HashMap<String, PlainValue>();
+
    /**
     * Is seriously meant to be package visible because it must not called nowhere except during initialzation in ObjectSubstituteFactory
     */
@@ -21,9 +25,43 @@ public class ObjectSubstitute implements Serializable
       _toString = toString;
    }
 
+   ObjectSubstitute(ArrayList<Object> plainValueArray)
+   {
+      _plainValueArray = plainValueArray;
+      _toString = PLAIN_VALUES + "[" + plainValueArray.size() + "]";
+
+
+      String className = null == plainValueArray.get(0) ? "<unknown>" : plainValueArray.get(0).getClass().getName();
+      String propertyName = "value " + (1);
+      HibernatePropertyInfo indentifierHibernatePropertyInfo = new HibernatePropertyInfo(propertyName, className, "<unknown>", new String[]{"<unknown>"});
+
+      _plainValueByPropertyName.put(propertyName, new PlainValue(plainValueArray.get(0), indentifierHibernatePropertyInfo));
+
+      HibernatePropertyInfo[] hibernatePropertyInfos = new HibernatePropertyInfo[plainValueArray.size() - 1];
+      for (int i = 1; i < plainValueArray.size(); i++)
+      {
+         className = null == plainValueArray.get(i) ? "<unknown>" : plainValueArray.get(i).getClass().getName();
+         propertyName = "value " + (i + 1);
+         hibernatePropertyInfos[i-1] = new HibernatePropertyInfo(propertyName, className, "<unknown>", new String[]{"<unknown>"});
+
+         _plainValueByPropertyName.put(propertyName, new PlainValue(plainValueArray.get(i), hibernatePropertyInfos[i-1]));
+      }
+
+
+      _mappedClassInfoData = new MappedClassInfoData(PLAIN_VALUES, "<unknown>", indentifierHibernatePropertyInfo, hibernatePropertyInfos);
+      _mappedClassInfoData.setPlainValueArray(true);
+   }
+
    void putSubstituteValueByPropertyName(String propertyName, PropertySubstitute propertySubstitute)
    {
-      _substituteValueByPropertyName.put(propertyName, propertySubstitute);
+      if (null == _plainValueArray)
+      {
+         _substituteValueByPropertyName.put(propertyName, propertySubstitute);
+      }
+      else
+      {
+         throw new IllegalStateException("Should not be called for plain values");
+      }
    }
 
    public String getClassName()
@@ -36,17 +74,38 @@ public class ObjectSubstitute implements Serializable
     */
    public Object getValue(String propertyName)
    {
-      return _substituteValueByPropertyName.get(propertyName).getSingleValue();
+      if (null == _plainValueArray)
+      {
+         return _substituteValueByPropertyName.get(propertyName).getSingleValue();
+      }
+      else
+      {
+         return _plainValueByPropertyName.get(propertyName).getValue();
+      }
    }
 
    public String getTypeName(String propertyName)
    {
-      return _substituteValueByPropertyName.get(propertyName).getHibernatePropertyInfo().getClassName();
+      if (null == _plainValueArray)
+      {
+         return _substituteValueByPropertyName.get(propertyName).getHibernatePropertyInfo().getClassName();
+      }
+      else
+      {
+         return _plainValueByPropertyName.get(propertyName).getHibernatePropertyInfo().getClassName();
+      }
    }
 
    public boolean wasInitialized(String propertyName)
    {
-      return _substituteValueByPropertyName.get(propertyName).isInitialized();
+      if (null == _plainValueArray)
+      {
+         return _substituteValueByPropertyName.get(propertyName).isInitialized();
+      }
+      else
+      {
+         return true;
+      }
    }
 
    public Collection<? extends ObjectSubstitute> getPersistentCollection(String propertyName)
@@ -56,22 +115,55 @@ public class ObjectSubstitute implements Serializable
 
    public boolean isPersistenCollection(String propertyName)
    {
-      return _substituteValueByPropertyName.get(propertyName).isPersistenCollection();
+      if (null == _plainValueArray)
+      {
+         return _substituteValueByPropertyName.get(propertyName).isPersistenCollection();
+      }
+      else
+      {
+         return false;
+      }
    }
 
    public boolean isNull(String propertyName)
    {
-      return _substituteValueByPropertyName.get(propertyName).isNull();  //To change body of created methods use File | Settings | File Templates.
+      if (null == _plainValueArray)
+      {
+         return _substituteValueByPropertyName.get(propertyName).isNull();
+      }
+      else
+      {
+         return null == _plainValueByPropertyName.get(propertyName).getValue();
+      }
    }
 
    public HibernatePropertyInfo getHibernatePropertyInfo(String propertyName)
    {
-      return _substituteValueByPropertyName.get(propertyName).getHibernatePropertyInfo();
+      if (null == _plainValueArray)
+      {
+         return _substituteValueByPropertyName.get(propertyName).getHibernatePropertyInfo();
+      }
+      else
+      {
+         return _plainValueByPropertyName.get(propertyName).getHibernatePropertyInfo();
+      }
    }
 
    @Override
    public String toString()
    {
       return _toString;
+   }
+
+   public MappedClassInfoData getPlainValueArrayMappedClassInfo()
+   {
+      if (null == _plainValueArray)
+      {
+         return null;
+      }
+      else
+      {
+         return _mappedClassInfoData;
+      }
    }
 }
