@@ -2,6 +2,7 @@ ObjectResultTabController.queryInfo=Count: {0}; {1}
 ObjectResultTabController.queryInfoLimited=LIMITED count:{0}; {1}
 
 ObjectResultController.hqlReadObjectsSuccess=Read {0} objects in {1} milliseconds
+ObjectResultController.hqlDataUpdateSuccess=Updated {0} objects in {1} milliseconds
 
 QueryResultNode.objectTree=Object tree
 
